--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python3.12
     buildCommand: |
       # Download ChromeDriver
-      CHROME_DRIVER_VERSION=$(curl -sS https://storage.googleapis.com/chrome-for-testing-public/134.0.6998.165/win64/chromedriver-win64.zip)
-      wget -N https://chromedriver.storage.googleapis.com/134.0.6998.165/chromedriver_linux64.zip -P ~/tmp
+      CHROME_DRIVER_VERSION=$(curl -sS https://storage.googleapis.com/134.0.6998.165)
+      wget -N https://storage.googleapis.com/chrome-for-testing-public/134.0.6998.165/linux64/chromedriver-linux64.zip -P ~/tmp
       unzip ~/tmp/chromedriver_linux64.zip -d ~/tmp
       sudo mv -f ~/tmp/chromedriver /usr/local/bin/chromedriver
       sudo chown root:root /usr/local/bin/chromedriver
