--- a/render.yaml
+++ b/render.yaml
@@ -5,13 +5,17 @@ services:
     envVars:
       - key: GEMINI_API_KEY
         value: "AIzaSyDWiXZueejp1eE61y5FeQf-S4U2EM3U0rQ"
+      - key: CHROME_BIN
+        value: "/usr/bin/google-chrome-stable"
+      - key: CHROMEDRIVER_PATH
+        value: "/usr/local/bin/chromedriver"
     buildCommand: |
       apt-get update && apt-get install -y wget unzip
       pip install -r requirements.txt
       # Install Google Chrome
       wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       apt install -y ./google-chrome-stable_current_amd64.deb
-      # Install ChromeDriver (using version 134.0.6998.165 for Linux)
+      # Install ChromeDriver (Linux version)
       wget -q https://storage.googleapis.com/chrome-for-testing-public/134.0.6998.165/linux64/chromedriver-linux64.zip
       unzip chromedriver-linux64.zip -d /usr/local/bin/
       chmod +x /usr/local/bin/chromedriver
